--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
+            android:name=".CourseDetailActivityStudent"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".TestDetailActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
@@ -57,6 +61,13 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivityStudent"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
