--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/user"
+        android:icon="@drawable/x"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/user"
+        android:roundIcon="@drawable/x"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNotes"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".TestSettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CourseSettingsActivity"
+            android:exported="false" />
         <activity
             android:name=".CommentActivity"
             android:exported="false" />
